feat: 고객 컨트롤러 구현
고객 컨트롤러 구현
html 추가

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	//테스트에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	// html Recompile
+	implementation 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
